Correct Gradle recipe
Typo for extension hybris/bin/ext-commerce/warehousingfacades/

--- a/installer/recipes/wp_b2c_acc_oms/build.gradle
+++ b/installer/recipes/wp_b2c_acc_oms/build.gradle
@@ -44,7 +44,7 @@ def config = {
 
         extName 'ordermanagementaddon'
         extName 'orderselfserviceaddon'
-        extName 'ordermanagementfacade'
+        extName 'ordermanagementfacades'
         extName 'ordermanagementwebservices'
 
         extName 'warehousing'
